# PyMPDATA

./: .appveyor.yml  .codecov.yml  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  .zenodo.json  Cargo.toml  PyMPDATA.html  PyMPDATA_MPI.html  PyMPDATA_examples.html  README.md  README.md.mpi  appveyor.yml  apt.txt  cartesian_grid-1.ipynb  clock.html  compare_dry_density.py  example_MPDATA_Jacobian.py  factories.html  index.html  mpdata.py  numerics.py  options.html  paper.bib  paper.md  plotter.py  pyproject.toml  pyproject.toml.mpi  requirements.txt  runner.py  scalar_field.html  search.js  setup.py  solver.html  state.py  stepper.html  test-time-requirements.txt  vector_field.html
.benchmarks/: macos-latest_results.json  ubuntu-latest_results.json  windows-latest_results.json
.binder/: postBuild  requirements.txt
.github/: dependabot.yml
Arabas_and_Farhat_2020/: Bjerksund_and_Stensland_1993.html  analysis_table_1.html  index.html  options.html  setup2_american_put.html  simulation.html
Bartman_et_al_2022/: index.html
DPDC/: index.html
Jarecka_et_al_2015/: formulae.html  settings.html
MPI/: README.md  pyproject.toml
MPI/PyMPDATA_MPI/: __init__.py  domain_decomposition.py  mpi_periodic.py  mpi_polar.py
MPI/PyMPDATA_MPI/impl/: __init__.py  boundary_condition_commons.py  mpi_boundary_condition.py
MPI/docs/: pympdata_mpi_landing.md
MPyDATA/: __init__.py  arrays.py  bcond.py  clock.py  coord.py  eulerian_fields.py  factories.py  formulae.py  jit_flags.py  mpdata.py  mpdata_factory.py  mpdata_formulae.py  mpi.py  numba_tst.py  options.py  opts.py  plotter.py  runner.py  solver.py  state.py  stepper.py
MPyDATA_tests/: params.py  test_clock.py  test_fields.py  test_mpdata.py  test_mpdata_1d.py  test_mpdata_2d.py
MPyDATA_tmp/: formulae.py  mpdata.py  mpdata_factory.py
Molenkamp_test_as_in_Jaruga_et_al_2015_Fig_12/: analysis.html  index.html  settings.html  simulation.html
Olesik_et_al_2022/: East_and_Marshall_1954.html  analysis.html  equilibrium_drop_growth.html  index.html  simulation.html  wall_time.html
PyMPDATA/: __init__.py  boundary_conditions.html  factories.py  impl.html  index.html  options.html  options.py  scalar_field.html  scalar_field.py  solver.html  solver.py  stepper.html  stepper.py  vector_field.html  vector_field.py
PyMPDATA_MPI/: __init__.py  domain_decomposition.html  domain_decomposition.py  hdf_storage.html  hdf_storage.py  impl.html  mpi_periodic.html  mpi_periodic.py  mpi_polar.html  mpi_polar.py  periodic.py  simulation.py  utils.html  utils.py
PyMPDATA_examples/: Arabas_and_Farhat_2020.html  Bartman_et_al_2022.html  DPDC.html  Jarecka_et_al_2015.html  Jaruga_et_al_2015.html  Magnuszewski_et_al_2025.html  Molenkamp_test_as_in_Jaruga_et_al_2015_Fig_12.html  Olesik_et_al_2022.html  Shipway_and_Hill_2012.html  Smolarkiewicz_1984.html  Smolarkiewicz_2006_Figs_3_4_10_11_12.html  Williamson_and_Rasch_1989_as_in_Jaruga_et_al_2015_Fig_14.html  advection_diffusion_1d.html  advection_diffusion_2d.html  burgers_equation.html  index.html  trixi_comparison.html  utils.html  wikipedia_example.html
PySuperDropletLES/: __init__.py  domain_decomposition.py  periodic.py  settings.py  simulation.py
Shipway_and_Hill_2012/: arakawa_c.html  droplet_activation.html  settings.html
Smolarkiewicz_1984/: index.html  settings.html
Smolarkiewicz_2006_Figs_3_4_10_11_12/: simulation.html
Williamson_and_Rasch_1989_as_in_Jaruga_et_al_2015_Fig_14/: index.html
advection_diffusion_1d/: index.html
arakawa_c/: discretisation.html  domain_decomposition.html  enumerations.html  field.html  grid.html  index.html  indexers.html  meta.html  scalar_field.html  traversals.html  traversals_impl_scalar.html  traversals_impl_vector.html  vector_field.html
boundary_conditions/: constant.html  extrapolated.html  index.html  periodic.html  polar.html
docs/: bibliography.json  generate_html.py
examples/: East_1957_Fig3.ipynb  MANIFEST.in  README.md  Smolarkiewicz_2006_Figs_3_4_10_11_12.ipynb  pyproject.toml  setup.py  witch_of_agnesi.py
formulae/: antidiff.html  flux.html  flux_corrected_transport.html  index.html  laplacian.html  upwind.html
impl/: clock.html  discretisation.html  domain_decomposition.html  enumerations.html  field.html  formulae_antidiff.html  formulae_axpy.html  formulae_flux.html  formulae_laplacian.html  formulae_nonoscillatory.html  formulae_upwind.html  grid.html  index.html  indexers.html  meta.html  traversals.html  traversals_common.html  traversals_halos_scalar.html  traversals_halos_vector.html  traversals_scalar.html  traversals_vector.html
paper/: paper.bib  paper.md
pdoc_templates/: index.html.jinja2
prototype/: requirements-examples.txt  requirements.txt
scenarios.mpi/: _scenario.py  cartesian.py  shallow_water.py  spherical.py
src/: main.rs
(+767 files in other folders)
